--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           return decodeURIComponent(results[1].replace(/\+/g, " "));
       }
 
+      var tag = document.createElement('script');
+
       tag.src = "https://www.youtube.com/player_api";
       var firstScriptTag = document.getElementsByTagName('script')[0];
       firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
